[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/selection/selection.gd" type="Script" id=1]

[node name="selection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="team_display" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 644.0
margin_bottom = 152.0

[node name="player_team" type="VBoxContainer" parent="VBoxContainer/team_display"]
margin_right = 320.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="VBoxContainer/team_display/player_team"]
margin_right = 320.0
margin_bottom = 20.0
rect_min_size = Vector2( 320, 20 )
text = "Player Team"
align = 1
valign = 1

[node name="ItemList" type="ItemList" parent="VBoxContainer/team_display/player_team"]
margin_top = 24.0
margin_right = 320.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 128 )
select_mode = 1

[node name="enemy_team" type="VBoxContainer" parent="VBoxContainer/team_display"]
margin_left = 324.0
margin_right = 644.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="VBoxContainer/team_display/enemy_team"]
margin_right = 320.0
margin_bottom = 20.0
rect_min_size = Vector2( 320, 20 )
text = "Enemy Team"
align = 1
valign = 1

[node name="ItemList" type="ItemList" parent="VBoxContainer/team_display/enemy_team"]
margin_top = 24.0
margin_right = 320.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 128 )
fixed_icon_size = Vector2( 32, 32 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 160.0
margin_right = 644.0
margin_bottom = 180.0
custom_constants/separation = 120

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 360.0
margin_bottom = 20.0
rect_min_size = Vector2( 360, 20 )
text = "Roster Pool"
align = 2
valign = 1

[node name="back" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 480.0
margin_right = 614.0
margin_bottom = 20.0
text = "Back to Main Menu"

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
margin_top = 188.0
margin_right = 644.0
margin_bottom = 368.0
rect_min_size = Vector2( 640, 180 )
select_mode = 1
allow_reselect = true
max_columns = 5
fixed_column_width = 5
icon_mode = 0
fixed_icon_size = Vector2( 48, 48 )

[node name="battle" type="Button" parent="VBoxContainer"]
margin_top = 376.0
margin_right = 644.0
margin_bottom = 396.0
text = "Ready to Battle!"
